k8s/deployments/keycloak/namespace.yml
---

kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    name: keycloak
