k8s/deployments/keycloak/ingress-keycloak.yml

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: keycloak.192.168.64.3.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
